Working on shader loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(Beam)
 add_subdirectory(libs/glfw-3.4)
 add_subdirectory(libs/glad)
 
-add_executable(beam src/Beam.cpp src/Game.cpp src/Window.cpp "src/Libraries.h")
+add_executable(beam src/Beam.cpp src/Game.cpp src/Window.cpp src/Shader.cpp)
 
 target_link_libraries(beam PUBLIC glfw)
 target_link_libraries(beam PUBLIC glad)
